Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138643

Details missing for some USB serialport adapters

XMLWordPrintable

    • Windows
    • 8
    • fddcbff30 (dev), b6d391130 (6.10), afdddc09b (6.9), 180f32ed8 (tqtc/lts-6.8)
    • Foundation PM Staging

      Happens at least with FTDI USB-to-Serial adapters, which create a Virtual COM Port which is a child of the actual USB device. In the Qt source code, the USB string descriptors are not retrieved unless the serial port's instance identifier starts with L"USB\", which does not apply to FTDI adapters because their instance ID starts with L"FTDIBUS\".

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            poikelin Joni Poikelin
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes