Fix device details of some USB serial port adapters

Fixes: QTBUG-138643
Pick-to: 6.10 6.9 6.8
Change-Id: I2ddafd2b94a3a02fff920b977a084675e9c5f5d5
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>